Added image and update assests

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h1>Institute of Software Engineering</h1>
 <h2>Batch- GDSE 58</h2>
 <h2>Chamodi Samarasinghe</h2>
+<img src="assests/images/diagnosis.png">
+
 
 </body>
 </html>
