Added about me and Education

--- a/index.html
+++ b/index.html
@@ -2,14 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Page</title>
+    <meta name="viewport" content="widt=device-widtg initial-scale=1">
+    <meta name="theme -color" content="blue">
+
 </head>
 <body>
+<header>
+    <nav>
 
-<h1>Institute of Software Engineering</h1>
-<h2>Batch- GDSE 58</h2>
-<h2>Chamodi Samarasinghe</h2>
-<img src="assests/images/diagnosis.png">
+    </nav>
+</header>
+
+<main>
+
+    <section>
+       <figure>Hey I'm Chamodi Samrasinghe</figure>
+
+        <div>
+           <pre>Student at Institute ofSoftware Engineering
+               IJSE</pre>
+        </div>
+    </section>
+
+<section>
+
+</section>
+
+
+</main>
+
 
 
 </body>
