--- a/education.html
+++ b/education.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Education</title>
+    <meta name="viewport" content="width=device-width initial-scale=1">
+    <meta name="description" content="My Education details">
+    <meta name="theme -color" content="blue">
+
 </head>
 <body>
+
+<header>
+    <h1>Education</h1>
+</header>
+
+<section>
+    
+</section>
 
 </body>
 </html>
