Added Contact, My projects, Skills and Tools

--- a/skills.html
+++ b/skills.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Education</title>
+    <title>Skills And Tools</title>
+    <meta name="description" content="Used Languages and Tools">
     <meta name="viewport" content="width=device-width initial-scale=1">
-    <meta name="description" content="My Education details">
     <meta name="theme -color" content="blue">
 
 </head>
 <body>
 
 <header>
-    <h1>Education</h1>
+    <h1>Skills</h1>
 </header>
 
-<section>
+    <section>
 
-</section>
+    </section>
+
 
 </body>
 </html>
