--- a/projects.html
+++ b/projects.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Education</title>
+    <title>Projects</title>
     <meta name="viewport" content="width=device-width initial-scale=1">
-    <meta name="description" content="My Education details">
     <meta name="theme -color" content="blue">
-
 </head>
 <body>
 
 <header>
-    <h1>Education</h1>
+    <h1>Skills</h1>
 </header>
 
 <section>
