--- a/contactme.html
+++ b/contactme.html
@@ -33,7 +33,7 @@
             <h2>..................................................</h2>
             <li>Email :</li>
             <h2>..................................................</h2>
-            <li>Contact No,:</li>
+            <li>Contact No :</li>
             <h2>..................................................</h2>
             <li>Tell me your need :</li>
             <h2>..................................................</h2>
