--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
+    <link rel="icon" href="assests/images/me%20(2).jpg">
     <meta name="viewport" content="widt=device-widtg initial-scale=1">
     <meta name="theme -color" content="blue">
 
@@ -17,11 +18,11 @@
 <main>
 
     <section>
-       <figure>Hey I'm Chamodi Samrasinghe</figure>
+        <figure><h1>Hey I'm Chamodi Samrasinghe</h1></figure>
 
         <div>
-           <pre>Student at Institute ofSoftware Engineering
-               IJSE</pre>
+            <pre><h2>Student at Institute ofSoftware Engineering
+                IJSE</h2>
         </div>
     </section>
 
