Added images to Skills

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div>
             <pre><h2>Student at Institute ofSoftware Engineering
-                IJSE</h2>
+                IJSE</h2></pre>
         </div>
     </section>
 
