--- a/skills.html
+++ b/skills.html
@@ -11,10 +11,21 @@
 <body>
 
 <header>
-    <h1>Skills</h1>
+    <h1>Skills and Tools</h1>
 </header>
 
     <section>
+        <h2>Skills</h2>
+        <img src="assests/images/html%20(2).png" alt="" width="100">
+        <img src="assests/images/java.jpg" alt="" width="100">
+        <img src="assests/images/js.png" alt="" width="150">
+        <img src="assests/images/css.png" alt="" width="100">
+        <img src="assests/images/sql.png" alt="" width="100">
+        <img src="assests/images/node.jpg" alt="" width="100">
+
+
+        <hr>
+        <h2>Tools</h2>
 
     </section>
 
