--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,13 @@
 
         <hr>
         <h2>Tools</h2>
-
+        <img src="assests/images/ps.png" alt="" width="80">
+        <img src="assests/images/hibernate.png" alt="" width="90">
+        <img src="assests/images/tool.png" alt="" width="150">
+        <img src="assests/images/inteliij.jpg" alt="" width="150">
+        <img src="assests/images/vs.jpg" alt="" width="70">
+        <img src="assests/images/a.png" alt="" width="70">
+        <img src="assests/images/slack.png" alt="" width="100">
     </section>
 
 
