--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
             <pre><h2>Student at Institute ofSoftware Engineering
                 IJSE</h2></pre>
         </div>
+
+        <img src="assests/images/facebook%20(1).png" alt="" width="40">
+        <img src="assests/images/linkedin%20(1).png" alt="" width="40">
+        <img src="assests/images/whatsapp.png" alt="" width="40">
+        <img src="assests/images/github%20(1).png" alt="" width="40">
+        
+        <img src="assests/images/about.jpg" alt="" width="300" align="right">
     </section>
 
 <section>
+
 
 </section>
 
