Added images to Conatct

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,11 +21,16 @@
             <li>Contact No : +94705135322 </li>
             <li>Email : chamodisandunika98@gmail.com</li>
 
-            <hr>
+            <img src="assests/images/me%20(2).jpg" alt="" width="400" align="right">
+
+
 
             <a href="cv" download="cv">Download CV</a>
 
         </ul>
+
+
+
     </section>
 </body>
 
