Added images to Project

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,9 @@
 </header>
 
 <section>
-
+    <img src="assests/images/park.jpg" alt="" width="400">
+    <img src="assests/images/pos.jpg" alt="" width="600">
+    <img src="assests/images/hospital.jpg" width="400">
 </section>
 
 </body>
