Update Education page

--- a/education.html
+++ b/education.html
@@ -16,6 +16,28 @@
 
 <section>
 
+    <ul>
+    <img src="assests/images/den.png" alt="" width="50" align="center">
+    <br><img src="assests/images/daughter.png" alt="" width="100" align="center">
+        <li><h3>1-5 (2004-2008) Deniyaya Central College</h3></li>
+
+
+
+     <img src="assests/images/SouthlandsCollege.jpg" alt="" width="50" align="center">
+        <br><img src="assests/images/student.png" alt="" width="100" align="center">
+        <li><h3>6-13 (2011-2017) Southlands College</h3></li>
+
+        <img src="assests/images/ijse.png" alt="" width="50" align="center">
+        <br><img src="assests/images/student%20(1).png" alt="" width="100" align="center">
+        <li><h3>Higher Studies (2019-2022) Institute of Software Engineering</h3></li>
+
+        <img src="assests/images/open.jpg" alt="" width="50" align="center">
+        <li><h3>Open University</h3></li>
+
+        <img src="assests/images/bee.png" alt="" width="50" align="center">
+        <li><h3>The Beeline English Acadamy</h3></li>
+
+    </ul>
 </section>
 
 </body>
