--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -15,16 +15,16 @@
 
     <section>
         <ul>
-            <li>Name : Chamodi Sandunika Samarasinghe</li>
-            <li>Age : 23</li>
-            <li>Address : Galle, SriLanka</li>
-            <li>Contact No : +94705135322 </li>
+            <li>Name : Chamodi Sandunika Samarasinghe</li><br>
+            <li>Age : 23</li><br>
+            <li>Address : Galle, SriLanka</li><br>
+            <li>Contact No : +94705135322 </li><br>
             <li>Email : chamodisandunika98@gmail.com</li>
 
-            <img src="assests/images/me%20(2).jpg" alt="" width="400" align="right">
+            <img src="../assests/images/me%20(2).jpg" alt="" width="400" align="right">
 
 
-
+            <object data="../assests/resources/Chamodi%20Samarasinghe1.pdf" type="application/pdf" width="300" height="300"></object><br>
             <a href="cv" download="cv">Download CV</a>
 
         </ul>
