--- a/sub/contactme.html
+++ b/sub/contactme.html
@@ -18,10 +18,10 @@
       <h2>Let's Talk</h2>
 
        <ul>
-           <li> <h4><img src="assests/images/female-student.png" alt="" width="50" >Chamodi Sandunika Samrasinghe</h4></li>
-           <li><h4> <img src="assests/images/location.png" alt="" width="50" >Galle, Sri Lanka.</h4></li>
-           <li> <img src="assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li>
-           <li> <img src="assests/images/whatsapp.png" alt="" width="40" align="center">  <a href="tel:+94705135322">Call Us</a></li>
+           <li> <h4><img src="../assests/images/female-student.png" alt="" width="50" >Chamodi Sandunika Samrasinghe</h4></li>
+           <li><h4> <img src="../assests/images/location.png" alt="" width="50" >Galle, Sri Lanka.</h4></li>
+           <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li>
+           <li> <img src="../assests/images/whatsapp.png" alt="" width="40" align="center">  <a href="tel:+94705135322">Call Us</a></li>
        </ul>
     </section>
 
