--- a/sub/contactme.html
+++ b/sub/contactme.html
@@ -20,7 +20,7 @@
        <ul>
            <li> <h4><img src="../assests/images/female-student.png" alt="" width="50" >Chamodi Sandunika Samrasinghe</h4></li>
            <li><h4> <img src="../assests/images/location.png" alt="" width="50" >Galle, Sri Lanka.</h4></li>
-           <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li>
+           <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li><br>
            <li> <img src="../assests/images/whatsapp.png" alt="" width="40" align="center">  <a href="tel:+94705135322">Call Us</a></li>
        </ul>
     </section>
@@ -28,17 +28,23 @@
     <section>
         <h2>How can I Help you?</h2>
 
+        <fieldset>
+            <label for="txtName">Full Name</label>
+            <input id="txtName" type="text" placeholder="Full name"><br><br>
 
-        <ul>
-            <li>Full Name :</li>
-            <h2>..................................................</h2>
-            <li>Email :</li>
-            <h2>..................................................</h2>
-            <li>Contact No :</li>
-            <h2>..................................................</h2>
-            <li>Tell me your need :</li>
-            <h2>..................................................</h2>
-        </ul>
+            <label for="txtEmail">Email</label>
+            <input id="txtEmail" type="text" placeholder="Your Email"><br><br>
+
+            <label for="txtContactNo">Contact No</label>
+            <input id="txtContactNo" type="text" placeholder="Contact No"><br><br>
+
+            <label for="txtYorNeed">Tell me your need</label>
+            <textarea id="txtYorNeed"></textarea><br><br>
+
+            <button>Submit</button>
+
+        </fieldset>
+
 
     </section>
 </main>
