--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <figure><h1>Hey I'm Chamodi Samrasinghe</h1></figure>
 
         <div>
-            <pre><h2>Student at Institute ofSoftware Engineering
-                IJSE</h2></pre>
+            <pre><h1><i>Student at Institute of Software Engineering</i></h1>
+            <h1 style="color: red">            IJSE</h1></pre>
+            <img src="assests/images/about.jpg" alt="" width="200" align="right">
         </div>
-<br>
+        <br>
         <br>
         <br>
         <br>
@@ -35,7 +36,7 @@
         <img src="assests/images/whatsapp.png" alt="" width="40">
         <img src="assests/images/github%20(1).png" alt="" width="40">
 
-        <img src="assests/images/about.jpg" alt="" width="300" align="right">
+
     </section>
 
 <section>
