--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="icon" href="assests/images/me%20(2).jpg">
     <meta name="viewport" content="widt=device-widtg initial-scale=1">
     <meta name="theme -color" content="blue">
-
+    <style>
+        h2{font-size: 50px;}
+        h1{font-size: 60px;}
+        h3{font-size: 70px;}
+    </style>
 </head>
 <body>
 <header>
@@ -21,9 +25,8 @@
         <figure><h1>Hey I'm Chamodi Samrasinghe</h1></figure>
 
         <div>
-            <pre><h1><i>Student at Institute of Software Engineering</i></h1>
-            <h1 style="color: red">            IJSE</h1></pre>
-            <img src="assests/images/about.jpg" alt="" width="200" align="right">
+            <pre><h2><i>Student at Institute of Software Engineering</i></h2>
+            <h3 style="color: red"><b class="term">            IJSE</b></h3></pre> <img src="assests/images/about.jpg" alt="" width="200" align="right">
         </div>
         <br>
         <br>
@@ -31,10 +34,11 @@
         <br>
         <br>
         <br>
-        <img src="assests/images/facebook%20(1).png" alt="" width="40">
-        <img src="assests/images/linkedin%20(1).png" alt="" width="40">
-        <img src="assests/images/whatsapp.png" alt="" width="40">
-        <img src="assests/images/github%20(1).png" alt="" width="40">
+
+        <img src="assests/images/facebook%20(1).png" alt="" width="50"><i></i>
+        <img src="assests/images/linkedin%20(1).png" alt="" width="50">
+        <img src="assests/images/whatsapp.png" alt="" width="50">
+        <img src="assests/images/github%20(1).png" alt="" width="50">
 
 
     </section>
