--- a/My Projects/CSS/Assignment- 02/index.html
+++ b/My Projects/CSS/Assignment- 02/index.html
@@ -10,15 +10,61 @@
 </head>
 <body>
 <header>
+    <img src="assets/images/ijse.png" alt="">
 
+    <ul>
+        <li>Home</li>
+        <li>Services</li>
+        <li>Contacts</li>
+        <li>About Us</li>
+    </ul>
 </header>
 
 <main>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Services</li>
+            <li>Contacts</li>
+            <li>About Us</li>
+        </ul>
+    </nav>
+    <section>
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
+            molestiae nobis praesentium quod, recusandae repellendus soluta veniam, voluptatem voluptatibus! Cupiditate
+            dolore doloribus nulla porro repellendus.</p>
+    </section>
 </main>
 
 <footer>
-    
+    <p>Develped By IJSE</p>
 </footer>
 </body>
 </html>
