--- a/My Projects/CSS/Assignment- 02/index.html
+++ b/My Projects/CSS/Assignment- 02/index.html
@@ -5,7 +5,21 @@
     <title>Case 2</title>
     <link href="assets/css/normalize.css"rel="stylesheet">
     <style>
+       header>img{
+           height: 50px;
+           width: 213px;
+           margin: 21px;
+       }
 
+        header>ul>li{
+            padding: 0 10px 0 10px;
+            display: inline-block;
+        }
+
+        header>ul>li:hover{
+            cursor: pointer;
+            color: red;
+        }
     </style>
 </head>
 <body>
