--- a/My Projects/CSS/Assignment- 02/index.html
+++ b/My Projects/CSS/Assignment- 02/index.html
@@ -5,6 +5,13 @@
     <title>Case 2</title>
     <link href="assets/css/normalize.css"rel="stylesheet">
     <style>
+        header{
+            position: relative;
+            height: 80px;
+            box-shadow: -2px 6px 9px -4px #917a7a;
+        }
+
+
        header>img{
            height: 50px;
            width: 213px;
@@ -19,6 +26,16 @@
         header>ul>li:hover{
             cursor: pointer;
             color: red;
+        }
+
+        header>ul{
+            position: absolute;
+            right: 30px;
+            bottom: 0;
+            font-size: 24px;
+            font-family: 'Lobster', cursive;
+            list-style: none;
+            color: #4a3a3a;
         }
     </style>
 </head>
