Updated Home page

--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -5,6 +5,11 @@
     <title>About Me</title>
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme -color" content="blue">
+    <style>
+        body{
+            background-color: darkblue;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,11 +20,11 @@
 
     <section>
         <ul>
-            <li>Name : Chamodi Sandunika Samarasinghe</li><br>
-            <li>Age : 23</li><br>
-            <li>Address : Galle, SriLanka</li><br>
-            <li>Contact No : +94705135322 </li><br>
-            <li>Email : chamodisandunika98@gmail.com</li>
+            <li><h3>Name : Chamodi Sandunika Samarasinghe</h3></li><br>
+            <li><h3>Age : 23</h3></li><br>
+            <li><h3>Address : Galle, SriLanka</h3></li><br>
+            <li><h3>Contact No : +94705135322</h3> </li><br>
+            <li><h3>Email : chamodisandunika98@gmail.com</h3></li>
 
             <img src="../assests/images/me%20(2).jpg" alt="" width="400" align="right">
 
