Change some styles

--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
             box-shadow: -2px 6px 9px -4px #917a7a;
         }
 
-        h2{font-size: 50px;
+        h2{
+            font-size: 50px;
             color: white;
         }
-        h1{font-size: 60px;
-            color: white;
+        h1{
+            font-size: 60px;
+            color: yellow;
         }
-        h3{font-size: 70px;
-            color: white;
+        h3{
+            font-size: 100px;
+            color: red;
+            left: 500px;
         }
 
         header>nav>ul{
@@ -42,11 +46,29 @@
 
         header>nav>ul>li:hover{
             cursor: pointer;
-            color: red;
+            color: yellow;
+        }
+
+        section>section>img{
+            cursor: pointer;
+            color: white;
         }
 
         body{
             background-color: black;
+        }
+
+        section>div>img{
+            border-radius: 200px;
+            position: absolute;
+            right: 80px;
+            top: 350px;
+        }
+
+        section>section>img{
+            padding: 0 10px 0 10px;
+            position: relative;
+            bottom: 50px;
         }
     </style>
 </head>
@@ -66,29 +88,28 @@
 <main>
 
     <section>
-        <figure><h1>Hey I'm Chamodi Samrasinghe</h1></figure>
+        <pre><h1>      Hey....! I'm Chamodi Samrasinghe</h1></pre>
 
         <div>
-            <pre><h2><i>Student at Institute of Software Engineering</i></h2>
-            <h3 style="color: red"><b class="term">            IJSE</b></h3></pre>
+            <pre><h2><i>     Student at Institute of Software Engineering</i></h2>
+            <h3 >           IJSE</b></h3></pre>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
 
+        
+        <section>
         <img src="assests/images/facebook%20(1).png" alt="" width="50"><i></i>
         <img src="assests/images/linkedin%20(1).png" alt="" width="50">
         <img src="assests/images/whatsapp.png" alt="" width="50">
         <img src="assests/images/github%20(1).png" alt="" width="50">
-
+        </section>
 
     </section>
 
 <section>
-    <img src="assests/images/about.jpg" alt="" width="200" align="right">
+    <div>
+        <img src="assests/images/about.jpg" alt="" width="180" align="right">
+    </div>
+
 </section>
 
 
