Updated about page

--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -6,8 +6,22 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme -color" content="blue">
     <style>
+        header{
+            color: #4e52e9;
+        }
+
         body{
-            background-color: darkblue;
+            background-color: #1d1e57;
+        }
+
+        section>ul{
+            color: white;
+        }
+
+        section>img{
+            position: absolute;
+            right: 0px;
+            top: 0px;
         }
     </style>
 </head>
@@ -25,18 +39,19 @@
             <li><h3>Address : Galle, SriLanka</h3></li><br>
             <li><h3>Contact No : +94705135322</h3> </li><br>
             <li><h3>Email : chamodisandunika98@gmail.com</h3></li>
-
-            <img src="../assests/images/me%20(2).jpg" alt="" width="400" align="right">
-
-
-            <object data="../assests/resources/Chamodi%20Samarasinghe1.pdf" type="application/pdf" width="300" height="300"></object><br>
-            <a href="cv" download="cv">Download CV</a>
-
         </ul>
-
-
-
     </section>
+
+    <section>
+        <img src="../assests/images/self.png" alt="" width="350" align="right">
+    </section>
+
+      <section>
+          <object data="../assests/resources/Chamodi%20Samarasinghe1.pdf" type="application/pdf" width="300" height="300"></object><br>
+          <a href="cv" download="cv">Download CV</a>
+      </section>
+
+
 </body>
 
 </html>
