--- a/My Projects/CSS/Assignment- 02/index.html
+++ b/My Projects/CSS/Assignment- 02/index.html
@@ -5,6 +5,13 @@
     <title>Case 2</title>
     <link href="assets/css/normalize.css"rel="stylesheet">
     <style>
+        body>section {
+            width: 50vw;
+            height: 50vh;
+            position: absolute;
+        }
+
+
         header{
             position: relative;
             height: 80px;
@@ -37,6 +44,38 @@
             list-style: none;
             color: #4a3a3a;
         }
+
+        nav>ul{
+            border: solid rebeccapurple 2px;
+            color: white;
+            width: 250px;
+            height: 830px;
+            background-color: rebeccapurple;
+            list-style: none;
+        }
+
+        section>img{
+            position: relative;
+            bottom: 850px;
+            left: 300px;
+
+        }
+
+        section>p{
+            position: relative;
+            left: 300px;
+            bottom: 850px;
+        }
+
+        footer>p{
+            border: solid grey 2px;
+            height: 30px;
+            position: relative;
+            bottom: 860px;
+            background-color: grey;
+            text-align: center;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -62,9 +101,9 @@
     </nav>
     <section>
         <section>
-            <div></div>
-            <div></div>
-            <div></div>
+            <img src="assets/gif/work.gif" width="400"  alt="">
+            <img src="assets/gif/work.gif" width="400" alt="">
+            <img src="assets/gif/work.gif" width="400" alt="">
         </section>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad asperiores dicta dolorum labore
