--- a/My Projects/CSS/Assignment- 02/index.html
+++ b/My Projects/CSS/Assignment- 02/index.html
@@ -5,10 +5,10 @@
     <title>Case 2</title>
     <link href="assets/css/normalize.css"rel="stylesheet">
     <style>
-        body>section {
-            width: 50vw;
-            height: 50vh;
-            position: absolute;
+        body{
+            width: 100vw;
+            height: 100vh;
+
         }
 
 
@@ -70,6 +70,7 @@
         footer>p{
             border: solid grey 2px;
             height: 30px;
+            width: 1800px;
             position: relative;
             bottom: 860px;
             background-color: grey;
