Updated contact page

--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -23,27 +23,31 @@
             right: 0px;
             top: 0px;
         }
+
+        body>div{
+
+        }
     </style>
 </head>
 
 <body>
-
+    <div></div>
 <header>
     <h1>About Me</h1>
 </header>
 
     <section>
         <ul>
-            <li><h3>Name : Chamodi Sandunika Samarasinghe</h3></li><br>
-            <li><h3>Age : 23</h3></li><br>
-            <li><h3>Address : Galle, SriLanka</h3></li><br>
-            <li><h3>Contact No : +94705135322</h3> </li><br>
+            <li><h3>Name : Chamodi Sandunika Samarasinghe</h3></li>
+            <li><h3>Age : 23</h3></li>
+            <li><h3>Address : Galle, SriLanka</h3></li>
+            <li><h3>Contact No : +94705135322</h3> </li>
             <li><h3>Email : chamodisandunika98@gmail.com</h3></li>
         </ul>
     </section>
 
     <section>
-        <img src="../assests/images/self.png" alt="" width="350" align="right">
+        <img src="../assests/images/self.png" alt="" width="345" align="right">
     </section>
 
       <section>
