--- a/sub/contactme.html
+++ b/sub/contactme.html
@@ -6,6 +6,49 @@
     <meta name="description" content="My contact details">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme -color" content="blue">
+    <style>
+        body{
+            background-color: #1d1e57;
+        }
+
+        h1{
+            color: #4e52e9;
+            font-family: 'Lobster', cursive;
+            font-size: 70px;
+        }
+
+
+
+        fieldset{
+            color: white;
+            font-size: 30px;
+            border: 2px solid white;
+            width: 500px;
+            height: 300px;
+            position: absolute;
+            right: 0;
+            top: 300px;
+            left: 800px;
+        }
+
+        section>div>h1{
+            font-size: 50px;
+            color: white;
+            position: absolute;
+            top: 130px;
+            right: 0;
+            left: 800px;
+        }
+
+        section>h1{
+            font-size: 50px;
+            color: white;
+        }
+
+        ul>li{
+            color: white;
+        }
+    </style>
 </head>
 <body>
 
@@ -15,18 +58,19 @@
 
 <main>
     <section>
-      <h2>Let's Talk</h2>
+      <h1>Let's Talk</h1>
 
        <ul>
-           <li> <h4><img src="../assests/images/female-student.png" alt="" width="50" >Chamodi Sandunika Samrasinghe</h4></li>
-           <li><h4> <img src="../assests/images/location.png" alt="" width="50" >Galle, Sri Lanka.</h4></li>
-           <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li><br>
+           <li> <h3><img src="../assests/images/female-student.png" alt="" width="50" >Chamodi Sandunika Samrasinghe</h3></li><br>
+           <li><h3> <img src="../assests/images/location.png" alt="" width="50" >Galle, Sri Lanka.</h3></li><br><br>
+           <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li><br><br><br>
            <li> <img src="../assests/images/whatsapp.png" alt="" width="40" align="center">  <a href="tel:+94705135322">Call Us</a></li>
        </ul>
     </section>
 
     <section>
-        <h2>How can I Help you?</h2>
+        <div>
+        <h1>How can I Help you?</h1>
 
         <fieldset>
             <label for="txtName">Full Name</label>
@@ -45,7 +89,7 @@
 
         </fieldset>
 
-
+        </div>
     </section>
 </main>
 
