--- a/My Projects/CSS/Assignment- 05/index.html
+++ b/My Projects/CSS/Assignment- 05/index.html
@@ -8,14 +8,38 @@
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="assests/css/fonts/css/all.css" rel="stylesheet">
+    <style>
+
+
+
+        section>div{
+            height: 40px;
+            border: 1px solid red;
+        }
+
+        section>div>h3{
+            margin: 0;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
 <section>
-    <div>Menu One</div>
-    <div>Menu Two</div>
-    <div>Menu Three</div>
-    <div>Menu Four</div>
-    <div>Menu Five</div>
+    <div>
+        <h3>Menu One</h3>
+    </div>
+    <div>
+        <h3>Menu Two</h3>
+    </div>
+    <div>
+        <h3>Menu Three</h3>
+    </div>
+    <div>
+        <h3>Menu Four</h3>
+    </div>
+    <div>
+        <h3>Menu Five</h3>
+    </div>
 </section>
 </body>
 </html>
