--- a/My Projects/CSS/Assignment- 05/index.html
+++ b/My Projects/CSS/Assignment- 05/index.html
@@ -20,6 +20,12 @@
             right: 172px;
         }
 
+        section>div>i{
+            position: absolute;
+            right: 10px;
+            top: 7px;
+            font-size: 28px;
+        }
 
         section>div{
             height: 40px;
@@ -49,18 +55,23 @@
 <section>
     <div>
         <h3>Menu One</h3>
+        <i class="fas fa-address-book"></i>
     </div>
     <div>
         <h3>Menu Two</h3>
+        <i class="fas fa-ambulance"></i>
     </div>
     <div>
         <h3>Menu Three</h3>
+        <i class="fas fa-book-medical"></i>
     </div>
     <div>
         <h3>Menu Four</h3>
+        <i class="fas fa-layer-group"></i>
     </div>
     <div>
         <h3>Menu Five</h3>
+        <i class="fas fa-cart-plus"></i>
     </div>
 </section>
 </body>
