--- a/My Projects/CSS/Assignment- 05/index.html
+++ b/My Projects/CSS/Assignment- 05/index.html
@@ -29,6 +29,7 @@
 
         section>div{
             height: 40px;
+            left: 0;
             border: 1px solid red;
             position: relative;
             background: purple;
