--- a/sub/education.html
+++ b/sub/education.html
@@ -6,7 +6,25 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="description" content="My Education details">
     <meta name="theme -color" content="blue">
+    <style>
+        body{
+            background-color: #1d1e57;
+        }
 
+        ul>li{
+            color: white;
+        }
+
+        section>div{
+            position: absolute;
+            border: 2px solid white;
+            width: 30px;
+            height: 700px;
+            top: 0;
+            right: 100px;
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
 
@@ -15,6 +33,7 @@
 </header>
 
 <section>
+    <div></div>
 
     <ul>
     <img src="../assests/images/den.png" alt="" width="50" align="center">
