--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <link rel="icon" href="assests/images/me%20(2).jpg">
     <meta name="viewport" content="widt=device-widtg initial-scale=1">
     <meta name="theme -color" content="blue">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lobster&display=swap" rel="stylesheet">
     <style>
 
         header{
             position: relative;
             height: 80px;
-            box-shadow: -2px 6px 9px -4px #917a7a;
+            box-shadow: -2px 6px 45px -4px #917a7a;
         }
 
         h2{
@@ -26,6 +32,7 @@
             font-size: 100px;
             color: red;
             left: 500px;
+
         }
 
         header>nav>ul{
