--- a/My Projects/CSS/Assignment- 05/case 1.html
+++ b/My Projects/CSS/Assignment- 05/case 1.html
@@ -13,6 +13,19 @@
             border-radius: 100%;
             border-top: 20px solid red;
         }
+
+        section>h2{
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+            width: max-content;
+            height: max-content;
+            color: white;
+            font-size: 30px;
+        }
     </style>
 </head>
 <body>
