--- a/My Projects/CSS/Assignment- 05/case 1.html
+++ b/My Projects/CSS/Assignment- 05/case 1.html
@@ -12,6 +12,14 @@
             border: 20px solid gray;
             border-radius: 100%;
             border-top: 20px solid red;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+            background-color: #1d1e57;
+            font-family: Ubuntu;
         }
 
         section>h2{
