--- a/My Projects/CSS/Assignment- 05/case 1.html
+++ b/My Projects/CSS/Assignment- 05/case 1.html
@@ -22,6 +22,17 @@
             font-family: Ubuntu;
         }
 
+        section:hover{
+            transform: rotate(360deg);
+            transition: all 1s;
+            cursor: pointer;
+        }
+
+        section:hover h2{
+            transform: rotate(-360deg);
+            transition: all 1s;
+        }
+
         section>h2{
             position: absolute;
             left: 0;
