--- a/My Projects/CSS/Assignment- 06/index.html
+++ b/My Projects/CSS/Assignment- 06/index.html
@@ -11,6 +11,8 @@
            border: 1px solid red;
            animation-name: gogo;
            animation-duration: 5s;
+           animation-direction: alternate;
+           animation-iteration-count: infinite;
        }
 
        @keyframes gogo {
@@ -23,21 +25,25 @@
            25%{
               left: 600px;
                top: 0;
+               transform: rotate(90deg);
            }
 
            50%{
                left: 600px;
                top: 400px;
+               transform: rotate(180deg);
            }
 
            75%{
                left: 0;
                top: 400px;
+               transform: rotate(270deg);
            }
 
            100%{
                left: 0;
                top: 0;
+               transform: rotate(360deg);
            }
        }
     </style>
