--- a/My Projects/CSS/Assignment- 06/index.html
+++ b/My Projects/CSS/Assignment- 06/index.html
@@ -19,31 +19,35 @@
            0%{
               left: 0;
                top: 0;
-
+               background-color: red;
            }
 
            25%{
               left: 600px;
                top: 0;
                transform: rotate(90deg);
+               background-color: green;
            }
 
            50%{
                left: 600px;
                top: 400px;
                transform: rotate(180deg);
+               background-color: blueviolet;
            }
 
            75%{
                left: 0;
                top: 400px;
                transform: rotate(270deg);
+               background-color: deeppink;
            }
 
            100%{
                left: 0;
                top: 0;
                transform: rotate(360deg);
+               background-color: gold;
            }
        }
     </style>
