--- a/sub/contactme.html
+++ b/sub/contactme.html
@@ -6,6 +6,7 @@
     <meta name="description" content="My contact details">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme -color" content="blue">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body{
             background-color: #1d1e57;
