--- a/sub/skills.html
+++ b/sub/skills.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Used Languages and Tools">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme -color" content="blue">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
