--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -5,6 +5,7 @@
     <title>About Me</title>
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="theme -color" content="blue">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         header{
             color: #4e52e9;
